--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <title>My-Porfolio</title>
 </head>
 <body>
     <section class="page page1">
@@ -166,6 +167,22 @@
     <footer>
         <div class="container container5">
             <h1 class="title-section reveal1">CONTACT</h1>
+            <div class="contact-container">
+                <div class="contact-left">
+                    <form>
+                        <label>What's your name?</label>
+                        <input type="text" name="name" class="name" id="name" placeholder="Input your name*">
+                        <label>What's your email?</label>
+                        <input type="email" name="email" class="email" id="email" placeholder="youremail@gmail.com*">
+                        <label>Your message</label>
+                        <textarea class="comment" id="comment" name="commnet" cols="50" rows="5" placeholder="Hello Alexis..">                        </textarea>
+                    </form>
+                </div>
+                <div class="contact-right">
+                    <span>CONTACT DETAILS</span>
+                    <i></i>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="JS/animation.js"></script>
