added submit button

--- a/index.html
+++ b/index.html
@@ -175,12 +175,21 @@
                         <label>What's your email?</label>
                         <input type="email" name="email" class="email" id="email" placeholder="youremail@gmail.com*">
                         <label>Your message</label>
-                        <textarea class="comment" id="comment" name="commnet" cols="50" rows="5" placeholder="Hello Alexis..">                        </textarea>
+                        <textarea class="comment" id="comment" name="commnet" cols="" rows="5" placeholder="Hello Alexis.."></textarea>
+                        <button type="submit" class="submit" name="submit" id="submit">Submit  <i class="fa-solid fa-paper-plane"></i></button>
                     </form>
                 </div>
                 <div class="contact-right">
-                    <span>CONTACT DETAILS</span>
-                    <i></i>
+                    <div class="details">
+                        <span>CONTACT DETAILS</span><br>
+                        <i class="fa-sharp fa-solid fa-envelope"></i><label> alexis.aquino.lumbera7@gmai.com</label>
+                    </div>
+                    <div class="social">
+                    <span>SOCIALS</span><br>
+                        <i class="fa-brands fa-facebook"></i><label> Facebook</label><br>
+                        <i class="fa-brands fa-linkedin"></i><label> Linkedin</label><br>
+                        <i class="fa-brands fa-github"></i><label> Github</label><br>
+                    </div>
                 </div>
             </div>
         </div>
