--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1 class="title-section title-section3 reveal1" id="title-container3">PROJECTS</h1>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Nuvel Global Venture, INC</h2>
+                    <h2 class="project-text-style-h2">Nuvel Global Venture, INC</h2>
                     <p>This website was made using Wordpress during my Internship.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Intern-Website" target="_blank"></a>
                 </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Sample Survey Form</h2>
+                    <h2 class="project-text-style-h2">Sample Survey Form</h2>
                     <p>I made this survey form in FreeCodeCamp using HTML and CSS.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Survey-Form" target="_blank">Source Code</a>
                 </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Student Database System</h2>
+                    <h2 class="project-text-style-h2">Student Database System</h2>
                     <p>Student database system with user admin and students account.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Student-Database" target="_blank">Source Code</a>
                 </div>
@@ -80,7 +80,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Sample Magasize</h2>
+                    <h2 class="project-text-style-h2">Sample Magasize</h2>
                     <p>A sample layout of a magazine I've created using HTML and CSS.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Sample-Magazine" target="_blank">Source Code</a>
                 </div>
@@ -90,7 +90,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Product Landing Page</h2>
+                    <h2 class="project-text-style-h2">Product Landing Page</h2>
                     <p>I made this Product Landing Page in freeCodeCamp using HTML and CSS.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Product-Landing-Page" target="_blank">Source Code</a>
                 </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Building City Syline</h2>
+                    <h2 class="project-text-style-h2">Building City Syline</h2>
                     <p>I made this Building City Skyline in freeCodeCamp using HTML and CSS.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Building-City-Skyline" target="_blank">Source Code</a>
                 </div>
@@ -110,7 +110,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Facebook Login Clone</h2>
+                    <h2 class="project-text-style-h2">Facebook Login Clone</h2>
                     <p>I've created this Facebook clone login page using HTML and CSS.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Facebook-Replica" target="_blank">Source Code</a>
                 </div>
@@ -120,7 +120,7 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="poject-text-style-h2">Building Penguin</h2>
+                    <h2 class="project-text-style-h2">Building Penguin</h2>
                     <p>I made this Building Penguin in FreeCodeCamp using HTML and CSS.</p>
                     <a  class="project-btn" href="https://github.com/alex742022/Building-Penguin" target="_blank">Source Code</a>
                 </div>
@@ -182,10 +182,10 @@
                 <div class="contact-right">
                     <div class="details">
                         <span>CONTACT DETAILS</span><br>
-                        <i class="fa-sharp fa-solid fa-envelope"></i><label> alexis.aquino.lumbera7@gmai.com</label>
+                        <i class="fa-sharp fa-solid fa-envelope"></i><label> alexis.aquino.lumbera7@gmail.com</label>
                     </div>
                     <div class="social">
-                    <span>SOCIALS</span><br>
+                        <span>SOCIALS</span><br>
                         <i class="fa-brands fa-facebook"></i><label> Facebook</label><br>
                         <i class="fa-brands fa-linkedin"></i><label> Linkedin</label><br>
                         <i class="fa-brands fa-github"></i><label> Github</label><br>
