--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <section class="page page1">
         <div class="nav-bar">
-            <a href="#title-container3">Projects</a>
-            <a href="#title-container2">About</a>
+            <div class="container navbar-content">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Projects</li>
+                    <li>Skills</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
         </div>
         <div class="container container1">
             <div class="text-content">
