--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="text-content">
                 <h1>Hi, my name is <span>Alexis Lumbera</span><br>
                 Aspiring Front End Developer</h1>
+                <button>Let's connect</button>
             </div>
         </div>
     </section>
@@ -59,7 +60,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Nuvel Global Venture, INC</h2>
                     <p>This website was made using Wordpress during my Internship.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Intern-Website" target="_blank"></a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Intern-Website" target="_blank"></a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img1 reveal2" src="./images/Intern.png" alt="Nuvel Website">
@@ -69,7 +73,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Sample Survey Form</h2>
                     <p>I made this survey form in FreeCodeCamp using HTML and CSS.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Survey-Form" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Survey-Form" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img2 reveal" src="./images/project6.png" alt="Survey form">
@@ -79,7 +86,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Student Database System</h2>
                     <p>Student database system with user admin and students account.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Student-Database" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Student-Database" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img3 reveal2" src="./images/studentdatabase.png" alt="Student Database">
@@ -89,7 +99,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Sample Magasize</h2>
                     <p>A sample layout of a magazine I've created using HTML and CSS.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Sample-Magazine" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Sample-Magazine" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img4 reveal" src="./images/project4.png" alt="Sample Magazine">
@@ -99,7 +112,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Product Landing Page</h2>
                     <p>I made this Product Landing Page in freeCodeCamp using HTML and CSS.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Product-Landing-Page" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Product-Landing-Page" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img5 reveal2" src="./images/project2.png" alt="Landing Page">
@@ -109,7 +125,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Building City Syline</h2>
                     <p>I made this Building City Skyline in freeCodeCamp using HTML and CSS.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Building-City-Skyline" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Building-City-Skyline" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img6 reveal" src="./images/project1.png" alt="Building City Skyline">
@@ -119,7 +138,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Facebook Login Clone</h2>
                     <p>I've created this Facebook clone login page using HTML and CSS.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Facebook-Replica" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Facebook-Replica" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img7 reveal2" src="./images/facebook-clone.png" alt="Facebook Clone">
@@ -129,7 +151,10 @@
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Building Penguin</h2>
                     <p>I made this Building Penguin in FreeCodeCamp using HTML and CSS.</p>
-                    <a  class="project-btn" href="https://github.com/alex742022/Building-Penguin" target="_blank">Source Code</a>
+                    <div class="btn-container">
+                        <a  class="project-btn" href="https://github.com/alex742022/Building-Penguin" target="_blank">Source Code</a>
+                        <button>View Live</button>
+                    </div>
                 </div>
                 <div class="column-right3">
                     <img class="Pimage-style img8 reveal" src="./images/project3.png" alt="Building Penguin">
