--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>My-Porfolio</title>
 </head>
 <body>
-    <section class="page page1">
+    <section class="page page1" id="page1">
         <div class="nav-bar">
             <div class="container navbar-content">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Projects</li>
-                    <li>Skills</li>
-                    <li>Contact</li>
+                    <a href="#page1"><li>Home</li></a>
+                    <a href="#page2"><li>About</li></a>
+                    <a href="#page3"><li>Projects</li></a>
+                    <a href="#page4"><li>Skills</li></a>
+                    <a href="#page5"><li>Contact</li></a>
                 </ul>
             </div>
         </div>
@@ -29,12 +29,12 @@
             </div>
         </div>
     </section>
-    <section class="page page2">
+    <section class="page page2" id="page2">
         <div class="container container2">
-            <h1 class="title-section reveal1" id="title-container2" >ABOUT ME</h1>
+            <h1 class="title-section reveal1">ABOUT ME</h1>
             <div class="content2">
                 <div class="column-left2 reveal">
-                    <img src="./images/MyPicture.jpg">
+                    <img src="/images/MyPicture.jpg">
                 </div>
                 
                 <div class="column-right2 reveal2">
@@ -55,7 +55,7 @@
     </section>
     <section class="page page3">
         <div class="container container3">
-            <h1 class="title-section title-section3 reveal1" id="title-container3">PROJECTS</h1>
+            <h1 class="title-section title-section3 reveal1" id="page3">PROJECTS</h1>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Nuvel Global Venture, INC</h2>
@@ -164,7 +164,7 @@
     </section>
     <section class="page page4">
         <div class="container container4">
-            <h1 class="title-section reveal1">SKILLS</h1>
+            <h1 class="title-section reveal1" id="page4">SKILLS</h1>
             <div class="skills-content">
                 <div class="column-left reveal">
                     <h2>My creative skills & experiences</h2>
@@ -196,7 +196,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="page5">
         <div class="container container5">
             <h1 class="title-section reveal1">CONTACT</h1>
             <div class="contact-container">
