--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="title-section reveal1">ABOUT ME</h1>
             <div class="content2">
                 <div class="column-left2 reveal">
-                    <img src="/images/MyPicture.jpg">
+                    <img src="./images/MyPicture.jpg">
                 </div>
                 
                 <div class="column-right2 reveal2">
