--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>My-Porfolio</title>
 </head>
 <body>
-    <section class="page page1" id="page1">
+    <section class="page page1" id="Home">
         <div class="nav-bar">
             <div class="container navbar-content">
                 <ul>
-                    <a href="#page1"><li>Home</li></a>
-                    <a href="#page2"><li>About</li></a>
-                    <a href="#page3"><li>Projects</li></a>
-                    <a href="#page4"><li>Skills</li></a>
-                    <a href="#page5"><li>Contact</li></a>
+                    <a href="#Home"><li>Home</li></a>
+                    <a href="#About"><li>About</li></a>
+                    <a href="#Projects"><li>Projects</li></a>
+                    <a href="#Skills"><li>Skills</li></a>
+                    <a href="#Contact"><li>Contact</li></a>
                 </ul>
             </div>
         </div>
@@ -29,7 +29,7 @@
             </div>
         </div>
     </section>
-    <section class="page page2" id="page2">
+    <section class="page page2" id="About">
         <div class="container container2">
             <h1 class="title-section reveal1">ABOUT ME</h1>
             <div class="content2">
@@ -55,7 +55,7 @@
     </section>
     <section class="page page3">
         <div class="container container3">
-            <h1 class="title-section title-section3 reveal1" id="page3">PROJECTS</h1>
+            <h1 class="title-section title-section3 reveal1" id="Projects">PROJECTS</h1>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Nuvel Global Venture, INC</h2>
@@ -164,7 +164,7 @@
     </section>
     <section class="page page4">
         <div class="container container4">
-            <h1 class="title-section reveal1" id="page4">SKILLS</h1>
+            <h1 class="title-section reveal1" id="Skills">SKILLS</h1>
             <div class="skills-content">
                 <div class="column-left reveal">
                     <h2>My creative skills & experiences</h2>
@@ -196,7 +196,7 @@
             </div>
         </div>
     </section>
-    <footer id="page5">
+    <footer id="Contact">
         <div class="container container5">
             <h1 class="title-section reveal1">CONTACT</h1>
             <div class="contact-container">
