change picture location

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="title-section reveal1">ABOUT ME</h1>
             <div class="content2">
                 <div class="column-left2 reveal">
-                    <img src="/images/MyPicture.jpg">
+                    <img src="./images/my-pictures/my-picture.jpg">
                 </div>
                 
                 <div class="column-right2 reveal2">
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img1 reveal2" src="./images/Intern.png" alt="Nuvel Website">
+                    <img class="Pimage-style img1 reveal2" src="./images/projects-picture/nuvel-website.png" alt="Nuvel Website">
                 </div>
             </div>
             <div class="content3 project-flex-content">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img2 reveal" src="./images/project6.png" alt="Survey form">
+                    <img class="Pimage-style img2 reveal" src="./images/projects-picture/sample-survey-form.png" alt="Survey form">
                 </div>
             </div>
             <div class="content3 project-flex-content">
@@ -92,12 +92,12 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img3 reveal2" src="./images/studentdatabase.png" alt="Student Database">
+                    <img class="Pimage-style img3 reveal2" src="./images/projects-picture/student-database.png" alt="Student Database">
                 </div>
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="project-text-style-h2">Sample Magasize</h2>
+                    <h2 class="project-text-style-h2">Sample Magazine</h2>
                     <p>A sample layout of a magazine I've created using HTML and CSS.</p>
                     <div class="btn-container">
                         <a  class="project-btn" href="https://github.com/alex742022/Sample-Magazine" target="_blank">Source Code</a>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img4 reveal" src="./images/project4.png" alt="Sample Magazine">
+                    <img class="Pimage-style img4 reveal" src="./images/projects-picture/sample-magazine.png" alt="Sample Magazine">
                 </div>
             </div>
             <div class="content3 project-flex-content">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img5 reveal2" src="./images/project2.png" alt="Landing Page">
+                    <img class="Pimage-style img5 reveal2" src="./images/projects-picture/product-landing-page.png" alt="Landing Page">
                 </div>
             </div>
             <div class="content3 project-flex-content">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img6 reveal" src="./images/project1.png" alt="Building City Skyline">
+                    <img class="Pimage-style img6 reveal" src="./images/projects-picture/building-city-skyline.png" alt="Building City Skyline">
                 </div>
             </div>
             <div class="content3 project-flex-content">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img7 reveal2" src="./images/facebook-clone.png" alt="Facebook Clone">
+                    <img class="Pimage-style img7 reveal2" src="./images/projects-picture/facebook-clone.png" alt="Facebook Clone">
                 </div>
             </div>
             <div class="content3 project-flex-content">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img8 reveal" src="./images/project3.png" alt="Building Penguin">
+                    <img class="Pimage-style img8 reveal" src="./images/projects-picture/building-penguin.png" alt="Building Penguin">
                 </div>
             </div>
         </div>
@@ -179,18 +179,18 @@
                 </div>
                 <div class="column-right reveal2">
                     <div class="img-container">   
-                        <img class="htmlpic" src="images/HTML5_logo.png" alt="html picture">
-                        <img class="csspic" src="images/CSS3_logo.png" alt="css picture">
-                        <img class="jspic" src="images/JS_logo.png" alt="javascript picture">
+                        <img class="htmlpic" src="./images/skills-picture/HTML5_logo.png" alt="html picture">
+                        <img class="csspic" src="./images/skills-picture/CSS3_logo.png" alt="css picture">
+                        <img class="jspic" src="./images/skills-picture/JS_logo.png" alt="javascript picture">
                     </div>
                     <div class="img-container">   
-                        <img class="phppic" src="images/PHP_logo.png" alt="php picture">
-                        <img class="msqlpic" src="images/MYSQL_logo.png" alt="msql picture">
+                        <img class="phppic" src="./images/skills-picture/PHP_logo.png" alt="php picture">
+                        <img class="msqlpic" src="./images/skills-picture/MYSQL_logo.png" alt="msql picture">
                     </div>
                     <div class="img-container">   
-                        <img class="phppic" src="images/BOOTSTRAP_logo.png" alt="bootstrap picture">
-                        <img class="reactpic" src="images/REACT_logo.png" alt="react picture"> 
-                        <img class="githubpic" src="images/GITHUB_logo.png" alt="github picture">
+                        <img class="phppic" src="./images/skills-picture/BOOTSTRAP_logo.png" alt="bootstrap picture">
+                        <img class="reactpic" src="./images/skills-picture/REACT_logo.png" alt="react picture"> 
+                        <img class="githubpic" src="./images/skills-picture/GITHUB_logo.png" alt="github picture">
                     </div>
                 </div>
             </div>
