--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <div class="container container1">
             <div class="text-content">
                 <h1>Hi, my name is <span>Alexis Lumbera</span><br>
-                Aspiring Front End Developer</h1>
+                Front End Developer</h1>
+                <p>
+                    I am from Philippines. I enjoy creating websites and web applications, and this is one of my hobbies.
+                    On this website, you'll discover some of my projects.
+                </p>
                 <button>Let's connect</button>
             </div>
         </div>
@@ -200,7 +204,7 @@
         <div class="container container5">
             <h1 class="title-section reveal1">CONTACT</h1>
             <div class="contact-container">
-                <div class="contact-left">
+                <div class="contact-left reveal">
                     <form>
                         <label>What's your name?</label>
                         <input type="text" name="name" class="name" id="name" placeholder="Input your name*">
@@ -211,7 +215,7 @@
                         <button type="submit" class="submit" name="submit" id="submit">Submit  <i class="fa-solid fa-paper-plane"></i></button>
                     </form>
                 </div>
-                <div class="contact-right">
+                <div class="contact-right reveal2">
                     <div class="details">
                         <span>CONTACT DETAILS</span><br>
                         <i class="fa-sharp fa-solid fa-envelope"></i><label> alexis.aquino.lumbera7@gmail.com</label>
