change reveal animation

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </div>
         <div class="container container1">
             <div class="text-content">
-                <h1>Hi, my name is <span>Alexis Lumbera</span><br>
-                Front End Developer</h1>
+                <h1> Alexis Lumbera</h1>
                 <p>
                     I am from Philippines. I enjoy creating websites and web applications, and this is one of my hobbies.
                     On this website, you'll discover some of my projects.
