added new image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 </p>
                 <button>Let's connect</button>
             </div>
+            <div class="image-container1">
+                <img src="./images/my-pictures/my-picture1.png" alt="profile-picture" >
+            </div>
         </div>
     </section>
     <section class="page page2" id="About">
