added navbar icon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                     <a href="#Contact"><li>Contact</li></a>
                 </ul>
             </div>
+            <div class="bar-container">
+                <i class="fa-solid fa-bars bar"></i>
+                <i class="fa-solid fa-xmark xmark"></i>
+            </div>
         </div>
         <div class="container container1">
             <div class="text-content">
