--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     I am from Philippines. I enjoy creating websites and web applications, and this is one of my hobbies.
                     On this website, you'll discover some of my projects.
                 </p>
-                <button>Let's connect</button>
+                <a href="#Contact"><button>Let's connect</button></a>
             </div>
             <div class="image-container1">
                 <img src="./images/my-pictures/my-picture1.png" alt="profile-picture" >
@@ -228,9 +228,15 @@
                     </div>
                     <div class="social">
                         <span>SOCIALS</span><br>
-                        <i class="fa-brands fa-facebook"></i><label> Facebook</label><br>
+                        <a href="https://m.facebook.com/alexis.lumbera" target="_blank">
+                            <i class="fa-brands fa-facebook"></i><label> Facebook</label><br>
+                        </a>
+                        <a href="https://www.linkedin.com/in/alexis-lumbera-547654230" target="_blank">
                         <i class="fa-brands fa-linkedin"></i><label> Linkedin</label><br>
+                        </a>
+                        <a href="https://github.com/alex742022" target="_blank">
                         <i class="fa-brands fa-github"></i><label> Github</label><br>
+                        </a>
                     </div>
                 </div>
             </div>
