added loading div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>My-Porfolio</title>
 </head>
+
+ <!-- Display while loading -->
+ <div class="loading-container">
+    <div class="loading1"></div>
+    <div class="loading2"></div>
+    <div class="loading3"></div>
+    <div class="loading4"></div>
+</div>
+
+<!-- Display if loading is finished -->
+
+<div class="display-container">
 <body>
     <section class="page page1" id="Home">
         <div class="nav-bar">
@@ -244,4 +256,5 @@
     </footer>
     <script src="JS/animation.js"></script>
 </body>
+</div>
 </html>
