added theme button and container

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                     <a href="#Skills"><li>Skills</li></a>
                     <a href="#Contact"><li>Contact</li></a>
                 </ul>
+                <div class="theme-button">
+                </div>
+                <div class="theme-container">
+                    <div class="color-reset"></div>
+                    <div class="color1"></div>
+                </div>
             </div>
             <div class="bar-container">
                 <i class="fa-solid fa-bars bar"></i>
@@ -38,7 +44,7 @@
         </div>
         <div class="container container1">
             <div class="text-content">
-                <h1> Alexis Lumbera</h1>
+                <h1 id="page1-header"> Alexis Lumbera</h1>
                 <p>
                     I am from Philippines. I enjoy creating websites and web applications, and this is one of my hobbies.
                     On this website, you'll discover some of my projects.
