added color container

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 <div class="theme-button">
                 </div>
                 <div class="theme-container">
-                    <div class="color-reset"></div>
-                    <div class="color1"></div>
+                    <div class="color color-reset"></div>
+                    <div class="color color1"></div>
+                    <div class="color color2"></div>
+                    <div class="color color3"></div>
                 </div>
             </div>
             <div class="bar-container">
