--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <body>
     <section class="page page1" id="Home">
         <div class="nav-bar">
+            <div class="logo-container">
+                <img src="./images/my-pictures/logo.png" alt="logo">
+            </div>
             <div class="container navbar-content">
                 <ul>
                     <a href="#Home"><li>Home</li></a>
