added new project

--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
             </div>
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
-                    <h2 class="project-text-style-h2">Sample Survey Form</h2>
+                    <h2 class="project-text-style-h2">Nike Clone</h2>
                     <p>I made this survey form in FreeCodeCamp using HTML and CSS.</p>
                     <div class="btn-container">
-                        <a  class="project-btn" href="https://github.com/alex742022/Survey-Form" target="_blank">Source Code</a>
-                        <button>View Live</button>
+                        <a  class="project-btn" href="https://github.com/alex742022/Nike-Clone" target="_blank">Source Code</a>
+                        <a href="https://alex742022.github.io/Nike-Clone/" target="_blank"><button>View Live</button></a>
                     </div>
                 </div>
                 <div class="column-right3">
-                    <img class="Pimage-style img2 reveal" src="./images/projects-picture/sample-survey-form.png" alt="Survey form">
+                    <img class="Pimage-style img2 reveal" src="./images/projects-picture/Nike-project.png" alt="Nike Clone">
                 </div>
             </div>
             <div class="content3 project-flex-content">
