changed nike description

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="content3 project-flex-content">
                 <div class="column-left3 left-width reveal1">
                     <h2 class="project-text-style-h2">Nike Clone</h2>
-                    <p>I made this survey form in FreeCodeCamp using HTML and CSS.</p>
+                    <p>Nike website clone that is fully responsive and includes a fetch API from local json file.</p>
                     <div class="btn-container">
                         <a  class="project-btn" href="https://github.com/alex742022/Nike-Clone" target="_blank">Source Code</a>
                         <a href="https://alex742022.github.io/Nike-Clone/" target="_blank"><button>View Live</button></a>
